# learn_iceberg

iceberg_pyspark_project/: learn_iceberg.ipynb  pyproject.toml
iceberg_pyspark_project/spark-warehouse/iceberg/schema/users/metadata/: .496d88ef-d5f7-4de4-abd3-7036009d5bba-m0.avro.crc  .snap-4716764787829332554-1-496d88ef-d5f7-4de4-abd3-7036009d5bba.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  496d88ef-d5f7-4de4-abd3-7036009d5bba-m0.avro  snap-4716764787829332554-1-496d88ef-d5f7-4de4-abd3-7036009d5bba.avro  v1.metadata.json  v2.metadata.json
