[project]
name = "learn-iceberg"
version = "0.1.0"
description = ""
authors = [
    {name = "P-Pavan-teja",email = "pspt1398@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pyspark (==3.5.1)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
